# PoimandresDiscordBotv2

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  constraints.txt  count servers.bat  deploy-commands.js  index.js  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  server-count.js  update-command-list.bat
.github/workflows/: ci.yml
commands/: ah.js  al.js  aurelius.js  bible.js  ch.js  contents.js  dh.js  emeraldtablet.js  enchiridion.js  help.js  oh.js  proclus-metaphysics.js  quran.js  sepher-yetzirah.js  tarot.js  yoga.js
commands/books/: yoga.json
plans/: 2026-05-21-PYTHON_REFACTOR.md  python-recreation-prompt.md
poimandres/: __init__.py  banner.py  banner.txt  books.py  bot.py  commands.py  config.py  constants.py  deploy_commands.py  embeds.py  help_content.py  server_count.py  tarot_cards.py
tests/: conftest.py  test_books.py  test_bot.py  test_commands.py  test_config.py  test_deploy_commands.py  test_embeds.py  test_server_count.py  test_version.py
